usr.bin/diff/diff.c
@@ -511,6 +511,8 @@ print_status(int val, char *path1, char *path2, const char *entry)
 		printf("File %s%s is not a regular file or directory and was skipped\n",
 		    path2, entry);
 		break;
+	case D_ERROR:
+		break;
 	}
 }
 
